# lt2222-assignment-3

./: .gitignore  README.md  cli commands  cli_commands  cli_commands.md  evaluate_classifier.py  generate_embeddings.py  packages.txt  pyproject.toml  run_pipeline.sh  test_train_fasttext.py  train_classifier.py  train_fasttext.py  transcript_mltgpu_scratch.txt  utils.py
doc/: cli_commands.md  transcript_mltgpu_scratch.txt
tests/: test_train_fasttext.py
